examples/kubernetes/single-domain/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oidc-authenticator
  labels:
    app: oidc-authenticator
