examples/kubernetes/single-domain/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: oidc-authenticator
  namespace: oidc-authenticator
  labels:
    app: oidc-authenticator
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: oidc-authenticator
